--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+@font-face{
+ font-family:'digital-clock-font';
+ src: url('src/technology.regular.ttf');
+}
+
 * {
     box-sizing: border-box;
 }
@@ -17,7 +22,8 @@ body {
     height: 650px;
     width: 400px;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 30px;
+    background-color: rgba(204, 144, 181, .6);
 }
 
 .display {
@@ -29,14 +35,16 @@ body {
 }
 
 .display-text {
-    background-color: rgba(100, 122, 238, 0.4);
+    background-color: rgb(72, 194, 101, .6);
+    font-family: digital-clock-font;
     width: 100%;
     display: flex;
     max-height: 85px;
-    padding-right: 30px;
-    padding-left: auto;
     font-size: 60px;
     align-items: center;
+    justify-content: flex-end;
+    padding-right: 30px;
+    border-radius: 30px;
 }
 
 .buttons {
@@ -53,10 +61,21 @@ button {
     max-width: 75px;
     height: 70px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 2px 10px;
+    background-color: rgba(54, 171, 228, .5);
 }
 
 .fifth {
     margin-bottom: 30px;
+}
+
+#del {
+    background-color: rgba(144, 7, 4, .65);
+    color: white;
+}
+
+#c {
+    background-color: rgba(176, 44, 29, .65);
+    color: white;
 }
